# NS-RobotArm

./: .gitignore  .gitmodules  ODrive_setup.sh  README.md  deploy.sh  install.sh  local_run.sh  setup.sh
.github/workflows/: actions-runner.yml
arduino/CANMaster/: CANMaster.ino
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/logs/myworkcell_core/: build.cmake.000.log.stderr  build.make.002.log.stderr
catkin_ws/src/myworkcell_core/: CMakeLists.txt
catkin_ws/src/myworkcell_moveit_config/: .setup_assistant
deploy/: deploy.sh
deploy/arduino/CANMaster/: CANMaster.ino
deploy/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
robot_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
robot_ws/logs/myworkcell_core/: build.cmake.000.log.stderr
robot_ws/src/ODrive_Interface_test/: CMakeLists.txt  package.xml
robot_ws/src/RA_controller/: CMakeLists.txt  package.xml
robot_ws/src/RA_controller/rrbot_control/: CMakeLists.txt  package.xml
robot_ws/src/RA_controller/rrbot_control/config/: rrbot_controllers.yaml
robot_ws/src/RA_controller/rrbot_control/include/rrbot_control/: rrbot_hw_interface.h
robot_ws/src/RA_controller/rrbot_control/launch/: rrbot_hardware.launch  rrbot_simulation.launch
robot_ws/src/RA_controller/rrbot_control/src/: rrbot_hw_interface.cpp
robot_ws/src/RA_hardware_interface/: CMakeLists.txt  package.xml
robot_ws/src/RA_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robot_ws/src/RA_moveit_sim_controller/: CMakeLists.txt
robot_ws/src/hardware_interface/: CMakeLists.txt  package.xml
robot_ws/src/myworkcell_support/: CMakeLists.txt
robot_ws/src/nsra_controller/: CMakeLists.txt  package.xml
robot_ws/src/nsra_controller/nsra_control/: CMakeLists.txt  package.xml
robot_ws/src/nsra_controller/nsra_control/config/: nsra_controllers.yaml
robot_ws/src/nsra_controller/nsra_control/include/nsra_control/: nsra_hw_interface.h
robot_ws/src/nsra_controller/nsra_control/launch/: nsra_hardware.launch
robot_ws/src/nsra_controller/nsra_control/src/: nsra_hw_interface.cpp  nsra_hw_main.cpp
robot_ws/src/nsra_moveit_config/: CMakeLists.txt
robot_ws/src/nsra_odrive_interface/: CMakeLists.txt  package.xml
robot_ws/src/nsra_support/: CMakeLists.txt
robot_ws/src/nsra_tools/: CMakeLists.txt
robot_ws/src/nsra_urdf/: CMakeLists.txt  package.xml
robot_ws/src/ra_tools/: CMakeLists.txt  package.xml
robot_ws/src/test_service_cpp/: package.xml  (+1 more)
(+451 files in other folders)
